--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -15,7 +15,8 @@ menu:
   sitemap: 站点地图
   commonweal: 公益 404
   game: 小游戏
-  comments: 留言板
+  comments: 留言
+  links: 友链
 sidebar:
   overview: 站点概览
   toc: 文章目录
